# softrays

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test.yaml
cmake/: AddCatch2Tests.cmake  Coverage.cmake
include/softrays/: aabb.hpp  bvh.hpp  hittable.hpp  material.hpp  math.hpp  perlin.hpp  random.hpp  raytracer.hpp  shapes.hpp  softrays.hpp  texture.hpp  transforms.hpp  utility.hpp  volumes.hpp
release/raw/demo/: demo  demo.html  demo.js  demo.wasm
release/raw/offline/: offline  offline.js
release/raw/softrays/: softrays  softrays.html  softrays.js  softrays.wasm
softrays/apps/demo/src/: CMakeLists.txt  demo.cpp
softrays/apps/demo/tests/: CMakeLists.txt
softrays/apps/offline/src/: CMakeLists.txt  offline.cpp
softrays/apps/offline/tests/: CMakeLists.txt  offline_tests.cpp
src/: CMakeLists.txt  main.cpp  raytracer.cpp
tests/: CMakeLists.txt  sphere_tests.cpp  vec3_tests.cpp
